Setting `maven.compiler.release` to `8`
* The project now targets Java 8 APIs in order to remain compatible with Spring Boot 2.X projects that are still using Java 8